# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Sep 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  -freenet-bin-0.7.1058.ebuild, +freenet-bin-0.7.1060.ebuild:
  New upstream release

  08 Sep 2007; Markus Ullmann <jokey@gentoo.org> freenet-bin-0.7.1058:
  unbreak it again

  08 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -freenet-bin-0.7.1054.ebuild, -freenet-bin-0.7.1056.ebuild:
  Drop old

  08 Sep 2007; Markus Ullmann <jokey@gentoo.org> freenet-bin-0.7.1058:
  Fix total crap (who reviewed this in our irc channel?)

  07 Sep 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  +freenet-bin-0.7.1058.ebuild:
  New upstream release

  24 Aug 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  freenet-bin-0.7.1054.ebuild, +freenet-bin-0.7.1056.ebuild:
  New upstream release

  12 Aug 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  -freenet-bin-0.7.1052.ebuild, -freenet-bin-0.7.1052-r1.ebuild,
  freenet-bin-0.7.1054.ebuild:
  Drop old ones for lack of source

  12 Aug 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  freenet-bin-0.7.1054.ebuild:
  given freenet user a needed shell

  11 Aug 2007; Thomas Sachau (Tommy[D]) thomas.sachau@gmx.de
  +freenet-bin-0.7.1054.ebuild:
  New upstream release

  10 Aug 2007; Thomas Sachau (Tommy[D] thomas.sachau@gmx.de
  +freenet-bin-0.7.1052-r1.ebuild:
  added ~amd64-keyword and change for collision-protect

  09 Aug 2007; Thomas Sachau (Tommy[D] thomas.sachau@gmx.de +metadata.xml,
  +freenet-bin-0.7.1052.ebuild:
  New ebuild for bug 128783 thanks to people at #gentoo-sunrise
