@@ -1,8 +1,8 @@
 DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r15074-snapshot.jar 2131029 RMD160 1ade10454cd6dca2fe0d65268cff6e2f5e55de4c SHA1 3bdb74eed0c668fabce3bd96fea2c0ca55410d14 SHA256 db51063e0f5509e702d1e15f682c75e50794f9cb22a610a73dda85deb99baa4c
+DIST freenet-r15122-snapshot.jar 2131696 RMD160 416483369415688b6dcf090e3e4f22469418c98a SHA1 146585c7b4df213f4fd2ac9b83ec0fe5ca073327 SHA256 c89cab533b2146d63ee12981aa507d9e85ee79993c261d855906d26cc72be6ae
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-bin-0.7.1060.ebuild 2377 RMD160 a1c728611f62a82bd5cf817a499152094c8adffb SHA1 f851603e488a5531751a60ef3ad70d282a63eb00 SHA256 1830ffef472b402322b0c4b6573e2cbab8b1ea168ef5e05dc4ca67de049a4877
-MISC ChangeLog 1636 RMD160 9e8079e19c469bda36e07eb7e4bf5593faf5fcd9 SHA1 319b28ab94a0018f5891c516441e644761aa3d4e SHA256 e736a73a3f299f7166c3cc33724162144e302bb452687b18d4f33f2875b12b86
+EBUILD freenet-bin-0.7.1061.ebuild 2382 RMD160 b9af646765e1f3c8f72cbc7bbb04a11ae9e79adf SHA1 c18eefa59c0ec8d6c88efa2d2fac64c20efe419e SHA256 0f00e2a1a82d6a575722779ef117a11f10e82e9402696ee18f051eb0eafdf1f9
+MISC ChangeLog 1783 RMD160 f08f26cce87f3e82a43b28febdbccce9507e7881 SHA1 cec388dd431f5d72840a90010c73f7568775d76a SHA256 6f20417e25dfb13d483ce276fcc32bb23f1220185eae344409a2e8a2295d9db4
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
